--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 
+- WhitespaceControlToken should not be a string.
+
 - tags should not actually hold the inline_content; their inner whitespace
   flag should be triggered instead and the child should be a normal child
     
