Notes and a README.

--- a/todo.txt
+++ b/todo.txt
@@ -17,6 +17,11 @@
 
 - implement tests for all the examples in the haml tutorial
 
+- cleanup a lot of the strip commands in the tag; there are way to many after
+  the nodes got control over the full rendering process
+
+- boolean attributes
+
 - empty inline expressions should have space around them.
 
     eg:
