--- a/todo.txt
+++ b/todo.txt
@@ -6,14 +6,14 @@
 - rename nodes.Filtered to nodes.Filter
                                                 
 - blank lines should perhaps not be immediately tossed out.
-	eg.:
-		- content = """one
-		    two
+    eg.:
+        - content = """one
+            two
 
-		    three"""
-		= content  
-	
-	This will drop the blank line.   
+            three"""
+        = content  
+    
+    This will drop the blank line.   
 
 - the compiler should have backend specific methods for the following:
     - boolean attributes (ie HTML vs XHTML versions)
@@ -26,21 +26,38 @@
 
     eg:
     
-        %=
-            'one'
-            'two'
+        - content = """before
+
+            after""".strip()
+        = content
+    
+    parses to:
+        
+        Parent
+        |   Source('content = """before')
+        |   Content('after""".strip()')
+        |   Expression('content', '')
+    
+    when it should be
+    
+        Parent
+        |   Source('content = """before')
+        |   |   Source('after""".strip()')
+        |   Expression('content', '')
+    
+        
     
     should go to
     
         <div>
             one
-        	two
+            two
         </div>
     
     but currently goes to
     
         <div>one
-        	two</div>
+            two</div>
     
     and gets compiled to
     
