--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,20 @@
 
 - Extend the Mako loader class to automatically compile mako.
     - Make sure it caches the results!
-    
+
+
 - Start thinking about exception handling (and making sense of it).
     
     It would be very nice if there was a way to adapt exception tracebacks
     similar to how Mako does it so that errors can be traced back to the
     original HAML source.
+    
+    All mako does is throw comments into the compiled template the line number
+    of the source. So if we added:
+    
+        ## PyHAML SOURCE LINE (\d+)
+    
+    This should not have any effect on the final mako at all.
 
 - Consider renaming some node classes:
     Comment -> HTMLComment
@@ -42,8 +50,13 @@
 	- Remember that the content of the tag is availible to the funciton as
 	  ${caller.body}
 	- Could do very similar syntax to define a function as well:
-		+example(a, b):
-			ul
-				li= a
-				li= b
-			= caller.body()
+		@example(*args)
+			ul - for arg in args:
+				li=|h arg
+			= caller.body
+
+- Some tags should only have content and no possibility of sub-tags. eg. script,
+style, etc. We should move the determination of if a node is greedy to a
+method on the node itself so that normals tags may also be greedy given the
+tag name. This method should also specify what type of node the children
+should be. Ie. a greedy tag would only be content.
