--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 
+- "unicode_as_entities" option on engine
+
 - make sure "xsl:apply-templates" tag works (ie. must allow for dash)
 
 - haml filter to strip leading whitespace (like docstrings)
