Added elif and else statements.
This is a hack ontop of the parser design. With
some luck I can come up with a better way to do
this.

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 
 - "unicode_as_entities" option on engine
 
+- come up with something less hacky for "else".
+
 - make sure "xsl:apply-templates" tag works (ie. must allow for dash)
 
 - haml filter to strip leading whitespace (like docstrings)
